refactor: username의 엄격한 제약을 frontend로 책임 전가
